[package]

name = "rsfchat"
version = "0.0.1"
authors = ["Filip Szczepański <jazz2rulez@gmail.com>"]

[dependencies]
rustc-serialize = "0.1.0"
hyper = "*"

[dependencies.websocket]
git = "https://github.com/cyderize/rust-websocket"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"
