[package]

name = "rsfchat"
version = "0.0.1"
authors = ["Filip Szczepański <jazz2rulez@gmail.com>"]

[dependencies]
rustc-serialize = "*"
hyper = "*"
url = "*"

[dependencies.websocket]
git = "https://github.com/cyderize/rust-websocket"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"
